--- a/language/language.csv
+++ b/language/language.csv
@@ -5,3 +5,4 @@ l_move,movimentos:,movement:,movimienot:
 l_P,Pontos:,Score:,Puntaje:
 b_new,Jogar Novamente,Play again,Juega de nuevo
 l_over,Fim de Jogo,End of the game ,Fin del juego
+l_start,Jogo inicia em,Game starts in,El juego comienza en
